fix(toolbar): Fix certain selection menu icons are invisible with the default theme

--- a/packages/js-draw/src/toolbar/widgets/components/makeButtonGrid.scss
+++ b/packages/js-draw/src/toolbar/widgets/components/makeButtonGrid.scss
@@ -11,6 +11,10 @@
 		> .icon {
 			max-width: var(--button-size);
 			max-height: var(--button-size);
+
+			// Ensures that all icons have the same base size
+			width: 48px;
+			height: 48px;
 		}
 
 		> label {
